just/src/javacc/JUST.java
/* Generated By:JJTree&JavaCC: Do not edit this line. JUST.java */
package javacc;
import javacc.tools.*;

public class JUST/*@bgen(jjtree)*/implements JUSTTreeConstants, JUSTConstants {/*@bgen(jjtree)*/
  protected static JJTJUSTState jjtree = new JJTJUSTState();
  private static SymbolTable m_symbolTable = new SymbolTable();

  public static void main(String args [])
  {
    System.out.println("Reading from standard input...");
    new JUST(System.in);
    try
    {
      SimpleNode n = JUST.Start();
      System.out.println("Thank you.");
    }
    catch (Exception e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }

  static final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      CompilationUnit();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void CompilationUnit() throws ParseException {
 /*@bgen(jjtree) CompilationUnit */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMPILATIONUNIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PROGRAM);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(26);
      Definition();
      jj_consume_token(27);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
     m_symbolTable.leaveScope();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void Definition() throws ParseException {
 /*@bgen(jjtree) Definition */
  SimpleNode jjtn000 = new SimpleNode(JJTDEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        if (jj_2_2(2147483647)) {
          VarDef();
        } else if (jj_2_3(3)) {
          FuncDef();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void VarDef() throws ParseException {
 /*@bgen(jjtree) VarDef */
  SimpleNode jjtn000 = new SimpleNode(JJTVARDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token token;
  Type type;
  Symbol symbol;
  Symbol initSymbol;
    try {
      type = Type();
      token = jj_consume_token(IDENTIFIER);
     symbol = m_symbolTable.insert(token.image, type, Symbol.Kind.varKind);
      if (jj_2_4(3)) {
        initSymbol = Init();
       symbol.init = true;
       symbol.val = initSymbol.val;
      } else {
        ;
      }
      jj_consume_token(28);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public Symbol Init() throws ParseException {
 /*@bgen(jjtree) Init */
  SimpleNode jjtn000 = new SimpleNode(JJTINIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Symbol symbol = new Symbol();
  Token token;
    try {
      jj_consume_token(29);
      if (jj_2_5(3)) {
        jj_consume_token(TrueValue);
      symbol.val = 1;
      } else if (jj_2_6(3)) {
        jj_consume_token(FalseValue);
      symbol.val = 0;
      } else if (jj_2_7(3)) {
        token = jj_consume_token(INTEGER_LITERAL);
      symbol.val = Integer.valueOf(token.image);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
     {if (true) return symbol;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
 /*@bgen(jjtree) Type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_8(3)) {
        jj_consume_token(VoidType);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return Type.voidType;}
      } else if (jj_2_9(3)) {
        jj_consume_token(IntType);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return Type.intType;}
      } else if (jj_2_10(3)) {
        jj_consume_token(BooleanType);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return Type.booleanType;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void FuncDef() throws ParseException {
 /*@bgen(jjtree) FuncDef */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      FuncHead();
      Block(false);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void FuncHead() throws ParseException {
 /*@bgen(jjtree) FuncHead */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCHEAD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token token;
  Type type;
  Symbol parListSymbol;
    try {
      type = Type();
      token = jj_consume_token(IDENTIFIER);
      jj_consume_token(30);
                m_symbolTable.enterScope();
      label_2:
      while (true) {
        parListSymbol = FormParList();
        if (jj_2_11(3)) {
          ;
        } else {
          break label_2;
        }
      }
      jj_consume_token(31);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    StringBuilder name = new StringBuilder(token.image);
    Symbol s = parListSymbol;
    while (s != null) {
      name.append("_").append(s.type.name);
      s = s.next;
    }
    s = m_symbolTable.insert(name.toString(), type, Symbol.Kind.funcKind);
    s.defined = true;
    s.symbols = parListSymbol;
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public Symbol FormParList() throws ParseException {
 /*@bgen(jjtree) FormParList */
  SimpleNode jjtn000 = new SimpleNode(JJTFORMPARLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Symbol symbol;
  Symbol last;
  Type type;
  Token token;
    try {
      if (jj_2_12(3)) {
        jj_consume_token(byref);
      } else {
        ;
      }
      type = Type();
      token = jj_consume_token(IDENTIFIER);
    last = symbol = m_symbolTable.insert(token.image, type, Symbol.Kind.parKind);
    symbol.init = true;
    /* TODO: byref / byvalue */

      label_3:
      while (true) {
        if (jj_2_13(3)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(32);
        if (jj_2_14(3)) {
          jj_consume_token(byref);
        } else {
          ;
        }
        type = Type();
        token = jj_consume_token(IDENTIFIER);
            Symbol s = m_symbolTable.insert(token.image, type, Symbol.Kind.parKind);
            s.init = true;
            /* TODO: byref / byvalue */

                last.next = s;
                last = s;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
     {if (true) return symbol;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Block(boolean openScope) throws ParseException {
 /*@bgen(jjtree) Block */
  SimpleNode jjtn000 = new SimpleNode(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
    if (openScope) {
            m_symbolTable.enterScope();
    }
      jj_consume_token(26);
      label_4:
      while (true) {
        if (jj_2_15(3)) {
          ;
        } else {
          break label_4;
        }
        if (jj_2_16(3)) {
          VarDef();
        } else if (jj_2_17(3)) {
          Stat();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(27);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    m_symbolTable.leaveScope();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Stat() throws ParseException {
 /*@bgen(jjtree) Stat */
  SimpleNode jjtn000 = new SimpleNode(JJTSTAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_18(2147483647)) {
        AssignStat();
      } else if (jj_2_19(3)) {
        CallStat();
      } else if (jj_2_20(3)) {
        IfStat();
      } else if (jj_2_21(3)) {
        WhileStat();
      } else if (jj_2_22(3)) {
        ReturnStat();
      } else if (jj_2_23(3)) {
        Block(true);
      } else if (jj_2_24(3)) {
        jj_consume_token(28);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void AssignStat() throws ParseException {
 /*@bgen(jjtree) AssignStat */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNSTAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token token;
  boolean isArray = false;
  Symbol symbol;
    try {
      token = jj_consume_token(IDENTIFIER);
    symbol = m_symbolTable.lookup(token.image);
      if (jj_2_25(3)) {
                        isArray = true;
                        // m_codeGen.emit2(Opcode.ALOAD, symbol.adr);

        jj_consume_token(33);
        Expr();
        jj_consume_token(34);
      } else {
        ;
      }
      jj_consume_token(29);
      Expr();
      jj_consume_token(28);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                if (isArray) {
                        // m_codeGen.emit1(Opcode.IASTORE);
                } else {
                        // m_codeGen.emit2(Opcode.ISTORE, symbol.adr);
                }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void CallStat() throws ParseException {
 /*@bgen(jjtree) CallStat */
  SimpleNode jjtn000 = new SimpleNode(JJTCALLSTAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Call();
      jj_consume_token(28);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Call() throws ParseException {
 /*@bgen(jjtree) Call */
  SimpleNode jjtn000 = new SimpleNode(JJTCALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token token;
  Symbol params = null;
  Symbol symbol;
    try {
      token = jj_consume_token(IDENTIFIER);
      jj_consume_token(30);
      if (jj_2_26(3)) {
        params = ActParList();
      } else {
        ;
      }
      jj_consume_token(31);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    StringBuilder name = new StringBuilder(token.image);
    Symbol s = params;
    while (s != null) {
      name.append("_").append(s.type.name);
      // TODO: mark for fixup if symbol is global undeclared variable
      s = s.next;
    }
    symbol = m_symbolTable.lookup(name.toString());
    symbol.symbols = params;
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public Symbol ActParList() throws ParseException {
 /*@bgen(jjtree) ActParList */
  SimpleNode jjtn000 = new SimpleNode(JJTACTPARLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Symbol symbol;
  Symbol current;
  Symbol last;
    try {
      symbol = Expr();
    last = symbol;
      label_5:
      while (true) {
        if (jj_2_27(3)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(32);
        current = Expr();
      last.next = current;
      last = current;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return symbol;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void IfStat() throws ParseException {
 /*@bgen(jjtree) IfStat */
  SimpleNode jjtn000 = new SimpleNode(JJTIFSTAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(If);
      jj_consume_token(30);
      Expr();
      jj_consume_token(31);
      Stat();
      if (jj_2_28(3)) {
        jj_consume_token(Else);
        Stat();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void WhileStat() throws ParseException {
 /*@bgen(jjtree) WhileStat */
  SimpleNode jjtn000 = new SimpleNode(JJTWHILESTAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(While);
      jj_consume_token(30);
      Expr();
      jj_consume_token(31);
      Block(true);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ReturnStat() throws ParseException {
 /*@bgen(jjtree) ReturnStat */
  SimpleNode jjtn000 = new SimpleNode(JJTRETURNSTAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(Return);
      if (jj_2_29(3)) {
        Expr();
      } else {
        ;
      }
      jj_consume_token(28);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public Symbol Expr() throws ParseException {
 /*@bgen(jjtree) Expr */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Symbol symbol;
    try {
      symbol = OrExpr();
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
     {if (true) return symbol;}
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }
